<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login activity -->
    <string name="welcome">Welcome!</string>
    <string name="question">Do not have an account yet?</string>
    <string name="sign_up_small">sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="password_error">Wrong password!</string>
    <string name="user_not_exists">User with such username does not exist</string>

    <!-- Sing up activity -->
    <string name="app_name">Currency Converter</string>
    <string name="name_error">Username can contain only latin characters and numbers</string>
    <string name="sign_up_capital">Sign up</string>
    <string name="error_register">User already exists!</string>
    <string name="success_register">Successful registration</string>
    <string name="password_is_too_long">Password is too long</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="no_lower_case_characters">No lower case characters</string>
    <string name="no_upper_case_characters">No upper case characters</string>
    <string name="no_numbers">No numbers</string>
    <string name="no_special_characters">No special characters</string>

    <!-- Main activity -->
    <string name="rate">conversion rate</string>
    <string name="history">Your request history</string>
    <string name="error_select">Select currencies and enter an amount</string>
    <string name="error_empty">Password and username fields can not be empty!</string>

    <!-- Settings activity -->
    <string name="general">General</string>
    <string name="language">language</string>
    <string name="information">Account information</string>
    <string name="change_password">change password</string>
    <string name="hidden_password" translatable="false">**********</string>
    <string name="change_username">change username</string>
    <string name="settings">Settings</string>
    <string name="log_out">log out</string>

    <!-- Change password activity -->
    <string name="new_password">new password</string>
    <string name="one_more_time">one more time</string>
    <string name="mismatch">Passwords don\'t match</string>
    <string name="change_success">Password was changed successfully!</string>

</resources>