<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UILayer.SettingsActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="410dp"
        android:layout_height="600dp"
        android:background="@drawable/settings_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/settingsBackButton"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/general"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/information"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/settingsUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/language"
        android:textColor="@color/purple"
        android:textSize="25dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/settingsPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/language"
        android:textColor="@color/purple"
        android:textSize="25dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/settingsChangePasswordButton"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/field"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:fontFamily="@font/kanit_medium"
        android:includeFontPadding="false"
        android:text="@string/change_password"
        android:textColor="@color/purple"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/settingsChangePasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/settingsChangePasswordButton"
        app:layout_constraintStart_toStartOf="@+id/settingsChangePasswordButton"
        app:layout_constraintTop_toTopOf="@+id/settingsChangePasswordButton" />

    <ImageButton
        android:id="@+id/settingsChangeUsernameButton"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/field"
        app:layout_constraintTop_toBottomOf="@id/settingsChangePasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:fontFamily="@font/kanit_medium"
        android:includeFontPadding="false"
        android:text="@string/change_username"
        android:textColor="@color/purple"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/settingsChangeUsernameButton"
        app:layout_constraintEnd_toEndOf="@+id/settingsChangeUsernameButton"
        app:layout_constraintStart_toStartOf="@+id/settingsChangeUsernameButton"
        app:layout_constraintTop_toTopOf="@+id/settingsChangeUsernameButton" />


</androidx.constraintlayout.widget.ConstraintLayout>