<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UILayer.ChangePasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_dollar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_euro" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_pound" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/coin_zl" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:layout_marginTop="200dp"
        android:textSize="@dimen/settings_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/changeSecondPasswordField"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/field"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/one_more_time"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeFirstPasswordField" />

    <EditText
        android:id="@+id/changeFirstPasswordField"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:background="@drawable/field"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="50dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/changeChangePasswordButton"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:text="@string/change_password"
        android:textColor="@color/purple"
        android:textSize="@dimen/settings_second"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/changeChangePasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/changeChangePasswordButton"
        app:layout_constraintStart_toStartOf="@+id/changeChangePasswordButton"
        app:layout_constraintTop_toTopOf="@+id/changeChangePasswordButton" />

    <ImageButton
        android:id="@+id/changeBackButton"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>